display PDF file + fix bug API + datagrid tu stretch ngang

--- a/frontend/quanlycongvan-project/src/components/congvan/congvan.css
+++ b/frontend/quanlycongvan-project/src/components/congvan/congvan.css
@@ -24,5 +24,8 @@
     padding: 8px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
